--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "resume",
+  "name": "trafalgar",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,15 +7,14 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "path": "^0.12.7",
     "vue": "^3.2.16",
-    "vue3-print-nb": "^0.1.4"
+    "vue-router": "^4.0.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.3.11",
-    "tailwindcss": "^3.0.10",
+    "autoprefixer": "^10.3.7",
+    "postcss": "^8.3.9",
+    "tailwindcss": "^2.2.16",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
     "vue-tsc": "^0.3.0"
