--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vue-router": "^4.0.11"
   },
   "devDependencies": {
+    "@types/node": "^17.0.8",
     "@vitejs/plugin-vue": "^1.9.3",
     "autoprefixer": "^10.3.7",
     "postcss": "^8.3.9",
