--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "trafalgar",
-  "version": "0.0.0",
+  "name": "nuxt-app",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
-  },
-  "dependencies": {
-    "vue": "^3.2.16",
-    "vue-router": "^4.0.11"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@types/node": "^17.0.8",
-    "@vitejs/plugin-vue": "^1.9.3",
-    "autoprefixer": "^10.3.7",
-    "postcss": "^8.3.9",
-    "tailwindcss": "^2.2.16",
-    "typescript": "^4.4.3",
-    "vite": "^2.6.4",
-    "vue-tsc": "^0.3.0"
+    "@nuxt/devtools": "latest",
+    "@unocss/nuxt": "^0.56.1",
+    "nuxt": "^3.7.3"
+  },
+  "dependencies": {
+    "@unocss/reset": "^0.56.1"
   }
 }
